--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6606,6 +6606,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         }
         .file-date {
             text-align: right;
+            font-size: 12px;
         }
 
         .file-location {
