--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -55,7 +55,7 @@
                 <a href="@routes.Application.index()" class="logo logo-letter">Y</a>
             </li>
             <li class="@isActiveMenu(MenuType.PROJECTS)">
-                <a href="@routes.ProjectApp.projects()">@Messages("title.projectList")</a>
+                <a href="@routes.ProjectApp.projects()" class="show-progress-bar">@Messages("title.projectList")</a>
             </li>
             @if(appFeedbackUrl){
             <li class="divider"></li>
