--- a/app/views/common/usermenu.scala.html
+++ b/app/views/common/usermenu.scala.html
@@ -60,16 +60,16 @@
 <ul class="gnb-usermenu">
     @if( !UserApp.currentUser().isAnonymous()) {
        <li class="gnb-usermenu-item hide-in-mobile">
-          <a href="@routes.Application.index()" class="user-item-btn">@Messages("notification")</a>
+          <a href="@routes.Application.index()" class="user-item-btn loggged-in">@Messages("notification")</a>
        </li>
        <li class="divider hide-in-mobile"></li>
        <li class="gnb-usermenu-item">
-          <a href="@routes.IssueApp.userIssues()" class="user-item-btn">@Messages("issue.myIssue")</a>
+          <a href="@routes.IssueApp.userIssues()" class="user-item-btn loggged-in">@Messages("issue.myIssue")</a>
         </li>
         <li class="divider"></li>
         @if(UserApp.currentUser.isSiteManager) {
         <li class="gnb-usermenu-item">
-            <a href="@routes.SiteApp.userList()" data-toggle="tooltip" title="@Messages("menu.siteAdmin")" data-placement="bottom" class="usermenu-icon-button">
+            <a href="@routes.SiteApp.userList()" data-toggle="tooltip" title="@Messages("menu.siteAdmin")" data-placement="bottom" class="usermenu-icon-button show-progress-bar">
                 <i class="yobicon-wrench"></i>
             </a>
         </li>
