authentication: Support Github/Gmail social login
Yona support social login, Github and Gmail.
It doesn't need to sign up anymore.

This feature was easily developed thanks to "Play Athenticate"
See: https://github.com/joscha/play-authenticate

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -365,3 +365,7 @@ li.select2-result-with-children:first-of-type {
     margin-bottom: -1px;
 }
 
+.oauth-login-btn{
+    display: block;
+    margin: 10px 0;
+}
