--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6638,3 +6638,17 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     margin-left: 10px;
     width: 400px;
 }
+
+.auth-provider-logo {
+    font-family: 'Roboto', sans-serif;
+    svg {
+        vertical-align: middle;
+    }
+    .github {
+        width: 30px;
+        display: inline-block;
+        margin-left: -4px;
+        margin-top: 3px;
+        margin-bottom: 3px;
+    }
+}
