issue: Support issue template feature
If you create ISSUE_TEMPLATE.md file at your repository root,
then it will be used for issue template for the project.

Also, user can edit issue template at project setting page
without pushing ISSUE_TEMPLATE.md to the repository

This feature was inspired by Github's same functionality.

See:
- https://help.github.com/articles/creating-an-issue-template-for-your-repository
- Yona Github issue #136

--- a/app/views/project/setting.scala.html
+++ b/app/views/project/setting.scala.html
@@ -1,24 +1,11 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Sangcheol Hwang
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
-@(message: String)(projectForm: play.data.Form[Project], project: Project, branches: List[String])
+@import play.data.Form
+@(message: String)(projectForm: Form[Project], project: Project, branches: List[String])
 
 @import helper._
 @import utils.TemplateHelper._
@@ -85,6 +72,12 @@
                         }
                         <input name="projectScope" type="radio" class="radio-btn" id="private" value="PRIVATE" @if(project.isPrivate){checked="checked"}><label for="private" class="bg-radiobtn label-private">@Messages("project.private")</label>
                         <span class="note">@Messages("project.private.notice")</span>
+                    </div>
+                </div>
+                <div class="box-wrap middle">
+                    <div class="cu-label">@Messages("issue.template")</div>
+                    <div class="cu-desc">
+                        <a href="@routes.BoardApp.newPostForm(project.owner, project.name)?issueTemplate=true" class="ybtn" target="_blank">@Messages("issue.template.edit")</a>
                     </div>
                 </div>
                 <div class="box-wrap middle">
