--- a/app/views/board/create.scala.html
+++ b/app/views/board/create.scala.html
@@ -1,24 +1,12 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Ahn Hyeok Jun
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
-@(title:String, form: play.data.Form[Posting], project:Project, isAllowedToNotice:Boolean, preparedPostBody:String = "")
+@import play.data.Form
+@import org.apache.commons.lang3.StringUtils
+@(title:String, form: Form[Posting], project:Project, isAllowedToNotice:Boolean, preparedPostBody:String = "")
 
 @import utils.AccessControl._
 @import utils.TemplateHelper._
@@ -26,9 +14,11 @@
 @import models.enumeration._
 @implicitField = @{ helper.FieldConstructor(simpleForm) }
 
-@readmeUpdateMessage = @{
+@titleMessage = @{
   if( !requestHeader.getQueryString("readme").equals(None) ) {
       "Update README.md"
+  } else if( !requestHeader.getQueryString("issueTemplate").equals(None) ) {
+      "ISSUE_TEMPLATE.md: Project Issue Template"
   }
 }
 
@@ -44,7 +34,7 @@
           </dt>
           <dd>
             @defining(form.errors().get("title")) { errors =>
-              <input type="text" id="title" name="title" class="zen-mode text title @if(errors != null) {error}" maxlength="250" tabindex="1" value="@readmeUpdateMessage"/>
+              <input type="text" id="title" name="title" class="zen-mode text title @if(errors != null) {error}" maxlength="250" tabindex="1" value="@titleMessage"/>
               @if(errors != null) {
                 <div class="message">
                 @for(error <- errors) {
@@ -54,24 +44,34 @@
               }
             }
           </dd>
+            <dd>
+            @if(!requestHeader.getQueryString("issueTemplate").equals(None)){
+              <div class="attach-wrap">
+                <span class="help help-droppable">@Messages("issue.template.no.attachment.allow")</span>
+              </div>
+            }
+            </dd>
           <dd style="position: relative;">
             @common.editor("body", preparedPostBody, "tabindex=2")
           </dd>
         </dl>
           @** fileUploader **@
-        @if(!UserApp.currentUser.isAnonymous) {
+        @if(requestHeader.getQueryString("issueTemplate").equals(None)) {
+          @if(!UserApp.currentUser.isAnonymous) {
             @common.fileUploader(ResourceType.BOARD_POST, null)
+          }
         }
         @** end of fileUploader **@
 
         <div class="right-txt mt10 mb10">
-          @if(isAllowedToNotice ){
+          @if(isAllowedToNotice && requestHeader.getQueryString("issueTemplate").equals(None)){
           <label class="checkbox">
             <input type="checkbox" id="notice" name="notice">
             @Messages("post.notice.label")
           </label>
           }
 
+          <input type="hidden" id="issueTemplate" name="issueTemplate" @boolToCheckedString(!requestHeader.getQueryString("issueTemplate").equals(None))>
           @if(isProjectResourceCreatable(UserApp.currentUser(), project, ResourceType.COMMIT)){
             @if(project.isGit && !requestHeader.getQueryString("readme").equals(None)){
             <label class="checkbox">
