--- a/app/views/issue/create.scala.html
+++ b/app/views/issue/create.scala.html
@@ -1,24 +1,11 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Ahn Hyeok Jun
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
-@(title:String, issueForm: play.data.Form[Issue], project:Project)
+@import play.data.Form
+@(title:String, issueForm: Form[Issue], project:Project, issueTemplate:String = "")
 @import helper._
 @import scala.collection.mutable.Map
 @import models.enumeration.ResourceType
@@ -58,7 +45,7 @@
                 <div class="span9 span-left-pane">
                     <dl>
                         <dd style="position: relative;">
-                            @common.editor("body", "", "tabindex=2", "content-body")
+                            @common.editor("body", issueTemplate, "tabindex=2", "content-body")
                         </dd>
                     </dl>
 
