authentication: Complement OAuth login
- Send mail when local user is created by OAuth Login
- Show user Login ID at User setting page
- Show 'Lost password link' at user's change password page

--- a/app/views/user/edit.scala.html
+++ b/app/views/user/edit.scala.html
@@ -35,6 +35,10 @@
 
         <form id="frmBasic" method="post" action="@routes.UserApp.editUserInfo" class="pull-left">
         <dl>
+            <dt>@Messages("user.loginId")</dt>
+            <dd class="mt10">
+                <input type="text" class="text" value="@user.loginId" readonly>
+            </dd>
           <dt>@Messages("user.name")</dt>
           <dd class="mt10">
             <input type="text" name="name" class="text" value="@user.name">
