--- a/app/views/user/edit_password.scala.html
+++ b/app/views/user/edit_password.scala.html
@@ -53,6 +53,15 @@
         </dd>
       </dl>
     </form>
+    <hr/>
+    <div class="mt10">
+        <dl>
+          <dt>@Messages("site.resetPasswordEmail.desc")</dt>
+          <dd class="mt10">
+            <a href="@routes.PasswordResetApp.lostPassword" class="ybtn ybtn-fail">@Messages("site.resetPasswordEmail.title")</a>
+          </dd>
+        </dl>
+      </div>
   </div>
 </div>
 <script type="text/javascript">
