--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -52,6 +52,7 @@
             /* Set side navigation */
             // Also, see index.scala.html for home page menu sliding actions !!
             var $sidebar = $("#mySidenav");
+            var viewSize = $(window).width();
 
             $("#main").on("click", function(event){
                 if( $sidebar.width() !== 0 && $(event.target).parents("#mySidenav").length == 0) {
@@ -77,7 +78,9 @@
             function openSidebar($sidebar){
                 $sidebar.width("420px").css("border", "1px solid #ccc");
                 $(".main-stream").removeClass("span12").addClass("span8");
-                $(".search-input").focus();
+                if (viewSize > 720) {
+                    $(".search-input").focus();
+                }
             }
 
             // used for new project list ui
