--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4673,6 +4673,7 @@ label.issue-item-row {
             font-size: 14px;
             font-weight:bold;
             color:@primary;
+            margin-left: 5px;
         }
     }
 
@@ -6650,5 +6651,11 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         margin-left: -4px;
         margin-top: 3px;
         margin-bottom: 3px;
+    }
+}
+
+.providers {
+    .provider-name {
+        height: 40px;
     }
 }
