--- a/app/views/user/view.scala.html
+++ b/app/views/user/view.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Ahn Hyeok Jun
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(user:User, groupNames:Array[String], projects:List[Project], postings:List[Posting], issues:List[Issue], pullRequests:List[PullRequest], milestones:List[Milestone], daysAgo:Int, selected:String)
 @import utils.MD5Util
@@ -30,6 +16,15 @@
     @Html(emailAddress.reverse.replace("@","@<span class='z'>"+MD5Util.md5Hex(emailAddress)+"</span>").replace(".", "<span class='z'>"+MD5Util.md5Hex(emailAddress).reverse+"</span>."))
 }
 @isActiveTab(tabId:String) = { @if(selected == tabId){ active } }
+
+@providerImg(provider: String) = {
+    @if(provider.equalsIgnoreCase("github")){
+        @Html(GithubLogo)
+    }
+    @if(provider.equalsIgnoreCase("google")){
+        @Html(GoogleLogo)
+    }
+}
 
 @siteLayout(user.loginId, utils.MenuType.USER) {
 <div class="site-breadcrumb-outer">
@@ -69,6 +64,19 @@
                 <div class="user-since">
                     <strong>@Messages("userinfo.since")</strong>
                     <span class="since">@user.getDateString</span>
+                </div>
+                <div class="user-since">
+                    <div>
+                        <strong>@Messages("user.connected.social.login")</strong>
+                    </div>
+                    <div class="auth-provider-logo">
+                    @for(credential <- UserCredential.findByUserId(user.id)){
+                        @for(provider <- credential.getProviders){
+                            @providerImg(provider)
+                        }
+                    }
+                    </div>
+
                 </div>
             </div>
 
