authentication: Support allowing OAuth providers
Allowed OAuth providers can be modified by 'application.social.login.support'
at application.conf file.

Default:
application.social.login.support = "github, google"

--- a/app/views/user/login.scala.html
+++ b/app/views/user/login.scala.html
@@ -52,7 +52,9 @@
       @currentAuth() { auth =>
         @if(auth == null) {
           @forProviders() { p =>
-            <a href="@p.getUrl()" class="ybtn oauth-login-btn">@Html(providerWithLogo(p.getKey()))</a>
+            @if(isAllowedOAuthProvider(p.getKey)) {
+              <a href="@p.getUrl()" class="ybtn oauth-login-btn">@Html(providerWithLogo(p.getKey()))</a>
+            }
           }
         }
       }
