code-browser: Fix markdown render link detect error
- Separate markdown rendering README at project home and code browser
- Unify markdown render style issue and code browser

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4300,22 +4300,15 @@ label.issue-item-row {
         width:100%;
 
         p {
-            margin: 100px 0; text-align:center;
             .filename { display:block; font-size:20px; }
             .filesize { display:block; font-size:13px; margin-bottom:20px; color:#999; }
         }
     }
 
     .codebrowser-markdown {
-        border: 5px solid #eee;
+        border: 1px solid #ccc;
         border-top: none;
-        font-size: 14px;
-        padding: 25px;
-
-        p {
-            margin: 15px 0;
-            text-align: left;
-        }
+        padding: 0 20px 15px 20px;
     }
 
     /** list **/
@@ -4476,11 +4469,11 @@ label.issue-item-row {
     .file-header {
         margin-top: 10px;
         line-height: 34px;
-        background-color: #eee;/*D7D7D7;*/
+        background-color: #eee;
         border-bottom:1px solid #ccc;
-        /*color: #767676;*/
         font-size: 11px;
         padding-left: 15px;
+        padding-right: 15px;
         overflow: hidden;
 
         .file-info {
