--- a/app/views/code/view.scala.html
+++ b/app/views/code/view.scala.html
@@ -1,31 +1,18 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Ahn Hyeok Jun
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
-@(project:Project, branches:List[String], recursiveData:List[com.fasterxml.jackson.databind.node.ObjectNode], branch:String, path:String)
+@import com.fasterxml.jackson.databind.node.ObjectNode
+@(project:Project, branches:List[String], recursiveData:List[ObjectNode], branch:String, path:String)
 
 @import utils.TemplateHelper._
 @import utils.TemplateHelper.Branches._
 @import utils.TemplateHelper.CodeBrowser._
 @import java.net.URLEncoder
 
-@parseFileInfo(files:com.fasterxml.jackson.databind.node.ObjectNode) = {
+@parseFileInfo(files:ObjectNode) = {
     @fieldText(files, "type") match {
         case "folder" => {
             @partial_view_folder(project, files.get("data"), branch, fieldText(files, "path"))
